<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/btn_star"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="About Us" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_menu_call"
            android:title="Contact Us" />
    </group>
</menu>